--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Welcome To Arabic DevOps Training .</h1>
-	<h1>Ansible Playbook Testing With Tags</h1>
+	<h1>Welcome to Kubernetes class in Arabic</h1>
 	<div id="smallcont">
 		<div></div>
 		<div id="try1">Lets Play</div>
