--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Welcome To Arabic DevOps Training .</h1>
+	<h1>Welcome To Telugu DevOps Training .</h1>
 	<h1>Welcome to Kubernetes class in Arabic</h1>
 	<div id="smallcont">
 		<div></div>
